build/tests/math_wrappers/c47.h

typedef bool bool_t;
typedef int16_t calcRegister_t;
typedef int32_t angularMode_t;
typedef struct {
  uint8_t bytes[16];
} decQuad;
typedef decQuad real34_t;
typedef struct {
  int32_t digits;
  int32_t exponent;
  uint8_t bits;
  uint16_t lsu[25];
} real_t;
typedef real_t decNumber;
enum rounding {
  DEC_ROUND_CEILING,
  DEC_ROUND_UP,
  DEC_ROUND_HALF_UP,
  DEC_ROUND_HALF_EVEN,
  DEC_ROUND_HALF_DOWN,
  DEC_ROUND_DOWN,
  DEC_ROUND_FLOOR,
  DEC_ROUND_05UP,
  DEC_ROUND_MAX,
};
typedef struct {
  int32_t digits;
  int32_t emax;
  int32_t emin;
  enum rounding round;
  uint32_t traps;
  uint32_t status;
  uint8_t clamp;
} realContext_t;
typedef realContext_t decContext;
#define WP34S_BigMod(x, y, res, real_context) WP34S_Mod((x), (y), (res), (real_context))
void elementwiseRema(void (*func)(void));
void elementwiseRemaReal(void (*func)(void));
void processRealComplexMonadicFunction(void (*realf)(void), void (*complexf)(void));
void processRealComplexDyadicFunction(void (*realf)(void), void (*complexf)(void));
void processIntRealComplexMonadicFunction(void (*realf)(void),
                                         void (*complexf)(void),
                                         void (*shortintf)(void),
                                         void (*longintf)(void));
void processIntRealComplexDyadicFunction(void (*realf)(void),
                                        void (*complexf)(void),
                                        void (*shortintf)(void),
                                        void (*longintf)(void));
bool_t real34IsAnInteger(const real34_t *value);
void convertAngle34FromTo(real34_t *angle, angularMode_t from_mode, angularMode_t to_mode);
void WP34S_Mod(const real_t *x, const real_t *y, real_t *res, realContext_t *real_context);
void WP34S_Logxy(const real_t *numer, const real_t *denom, real_t *res, realContext_t *real_context);
void C47_WP34S_Cvt2RadSinCosTan(const real_t *angle,
                                angularMode_t mode,
                                real_t *sin,
                                real_t *cos,
                                real_t *tan,
                                realContext_t *real_context);
void C47_WP34S_Asin(const real_t *x, real_t *angle, realContext_t *real_context);
void C47_WP34S_Acos(const real_t *x, real_t *angle, realContext_t *real_context);
void C47_WP34S_Atan(const real_t *x, real_t *angle, realContext_t *real_context);
void C47_WP34S_Atan2(const real_t *y, const real_t *x, real_t *angle, realContext_t *real_context);
void WP34S_SinhCosh(const real_t *x, real_t *sin_out, real_t *cos_out, realContext_t *real_context);
void WP34S_ArcSinh(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_ArcTanh(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_Tanh(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_Erf(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_Erfc(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_Ln(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_Ln1P(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_ExpM1(const real_t *x, real_t *res, realContext_t *real_context);
void realPower(const real_t *base, const real_t *exponent, real_t *result, realContext_t *real_context);
void PowerReal(const real_t *base, const real_t *exponent, real_t *result, realContext_t *real_context);
uint8_t PowerComplex(const real_t *base_real, const real_t *base_imag, const real_t *exponent_real, const real_t *exponent_imag, real_t *result_real, real_t *result_imag, realContext_t *real_context);
void WP34S_Bernoulli(const real_t *x, real_t *res, bool_t bnstar, realContext_t *real_context);
void WP34S_Factorial(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_InverseW(const real_t *x, real_t *res, realContext_t *real_context);
void WP34S_InverseComplexW(const real_t *real, const real_t *imag, real_t *res_real, real_t *res_imag, realContext_t *real_context);
void WP34S_LambertW(const real_t *x, real_t *res, bool_t negative_branch, realContext_t *real_context);
void WP34S_ComplexLambertW(const real_t *real, const real_t *imag, real_t *res_real, real_t *res_imag, realContext_t *real_context);
void WP34S_ComplexGamma(const real_t *real, const real_t *imag, real_t *res_real, real_t *res_imag, realContext_t *real_context);
void WP34S_betai(const real_t *b, const real_t *a, const real_t *x, real_t *res, realContext_t *real_context);
void logxyLonI(const real_t *denom);
void logxyReal(const real_t *denom);
void logxyCplx(const real_t *denom);
void lnComplex(const real_t *real, const real_t *imag, real_t *lnReal, real_t *lnImag, realContext_t *realContext);
void sqrt1Px2Complex(const real_t *real, const real_t *imag, real_t *resReal, real_t *resImag, realContext_t *realContext);
void sqrtComplex(const real_t *real, const real_t *imag, real_t *resReal, real_t *resImag, realContext_t *realContext);
void int32ToReal(int32_t source, real_t *destination);
int32_t realToInt32C47(const real_t *source, bool_t *error);
decNumber *decimal128ToNumber(const real34_t *source, decNumber *destination);
decNumber *decNumberMultiply(decNumber *result, const decNumber *lhs, const decNumber *rhs, decContext *real_context);
decNumber *decNumberDivide(decNumber *result, const decNumber *lhs, const decNumber *rhs, decContext *real_context);
decNumber *decNumberSquareRoot(decNumber *result, const decNumber *rhs, decContext *real_context);
decNumber *decNumberExp(decNumber *result, const decNumber *rhs, decContext *real_context);
decNumber *decNumberAdd(decNumber *result, const decNumber *lhs, const decNumber *rhs, decContext *real_context);
decNumber *decNumberSubtract(decNumber *result, const decNumber *lhs, const decNumber *rhs, decContext *real_context);
decNumber *decNumberFMA(decNumber *result, const decNumber *lhs, const decNumber *rhs, const decNumber *term, decContext *real_context);
decNumber *decNumberFromUInt32(decNumber *result, uint32_t source);
void realToIntegralValue(const real_t *source, real_t *destination, enum rounding mode, realContext_t *realContext);
bool_t realCompareEqual(const real_t *number1, const real_t *number2);
bool_t realCompareLessThan(const real_t *number1, const real_t *number2);
bool_t realCompareAbsEqual(const real_t *number1, const real_t *number2);
bool_t realCompareAbsGreaterThan(const real_t *number1, const real_t *number2);
bool_t realIsAnInteger(const real_t *x);
void realSetNaN(real_t *value);
void realSetZero(real_t *value);
void realSetOne(real_t *value);
void divRealComplex(const real_t *numer,
                    const real_t *denom_real,
                    const real_t *denom_imag,
                    real_t *quotient_real,
                    real_t *quotient_imag,
                    realContext_t *real_context);
void divComplexComplex(const real_t *numer_real,
                       const real_t *numer_imag,
                       const real_t *denom_real,
                       const real_t *denom_imag,
                       real_t *quotient_real,
                       real_t *quotient_imag,
                       realContext_t *real_context);
void mulComplexReal(const real_t *factor1_real,
                    const real_t *factor1_imag,
                    const real_t *factor2,
                    real_t *product_real,
                    real_t *product_imag,
                    realContext_t *real_context);
void mulComplexi(const real_t *inReal, const real_t *inImag, real_t *productReal, real_t *productImag);
void mulComplexComplex(const real_t *factor1_real,
                       const real_t *factor1_imag,
                       const real_t *factor2_real,
                       const real_t *factor2_imag,
                       real_t *product_real,
                       real_t *product_imag,
                       realContext_t *real_context);
uint64_t WP34S_extract_value(uint64_t val, int32_t *sign);
int64_t WP34S_build_value(uint64_t x, int32_t sign);
uint64_t WP34S_int2pow(uint64_t x);
uint64_t WP34S_int10pow(uint64_t x);
uint64_t WP34S_intLog10(uint64_t x);
uint64_t WP34S_intLog2(uint64_t x);
uint64_t WP34S_intAbs(uint64_t x);
uint64_t WP34S_intSqrt(uint64_t x);
uint64_t WP34S_intAdd(uint64_t x, uint64_t y);
uint64_t WP34S_intSubtract(uint64_t x, uint64_t y);
uint64_t WP34S_intDivide(uint64_t y, uint64_t x);
uint64_t WP34S_intGCD(uint64_t y, uint64_t x);
uint64_t WP34S_intLCM(uint64_t y, uint64_t x);
uint64_t WP34S_intMultiply(uint64_t y, uint64_t x);
uint64_t WP34S_intChs(uint64_t x);
void fnMatrixSquareRoot(uint16_t unusedButMandatoryParameter);
void elementwiseRealRema(void (*func)(void));
void elementwiseCxmaReal(void (*func)(void));
void elementwiseRealCxma(void (*func)(void));
void fnInvertMatrix(uint16_t unusedButMandatoryParameter);
void convertRealToReal34ResultRegister(const real_t *real, calcRegister_t dest);
const real_t *z47_math_wrappers_const_0(void);
const real_t *z47_math_wrappers_const_1(void);
const real_t *z47_math_wrappers_const_minus_1(void);
const real_t *z47_math_wrappers_const_2(void);
const real_t *z47_math_wrappers_const_5(void);
const real_t *z47_math_wrappers_const_100(void);
const real_t *z47_math_wrappers_const_1on2(void);
const real_t *z47_math_wrappers_const_1on3(void);
const real_t *z47_math_wrappers_const_phi(void);