zig_src/mathematics/math_command_wrappers_runtime.zig

pub extern fn convertAngle34FromTo(angle: *real34_t, from_mode: angularMode_t, to_mode: angularMode_t) void;
pub extern fn C47_WP34S_Cvt2RadSinCosTan(angle: *const real_t, mode: angularMode_t, sin: ?*real_t, cos: ?*real_t, tan: ?*real_t, real_context: *realContext_t) void;
pub extern fn C47_WP34S_Asin(x: *const real_t, angle: *real_t, real_context: *realContext_t) void;
pub extern fn C47_WP34S_Acos(x: *const real_t, angle: *real_t, real_context: *realContext_t) void;
pub extern fn C47_WP34S_Atan(x: *const real_t, angle: *real_t, real_context: *realContext_t) void;
pub extern fn C47_WP34S_Atan2(y: *const real_t, x: *const real_t, angle: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_betai(b: *const real_t, a: *const real_t, x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_SinhCosh(x: *const real_t, sin_out: ?*real_t, cos_out: ?*real_t, real_context: *realContext_t) void;
pub extern fn WP34S_ArcSinh(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_ArcTanh(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_Tanh(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_Erf(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_Erfc(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_Bernoulli(x: *const real_t, res: *real_t, bnstar: bool, real_context: *realContext_t) void;
pub extern fn WP34S_InverseW(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_InverseComplexW(real: *const real_t, imag: *const real_t, res_real: *real_t, res_imag: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_LambertW(x: *const real_t, res: *real_t, negative_branch: bool, real_context: *realContext_t) void;
pub extern fn WP34S_ComplexLambertW(real: *const real_t, imag: *const real_t, res_real: *real_t, res_imag: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_Factorial(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_ComplexGamma(real: *const real_t, imag: *const real_t, res_real: *real_t, res_imag: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_Ln(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_Ln1P(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_ExpM1(x: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn logxyLonI(denom: *const real_t) void;
pub extern fn logxyReal(denom: *const real_t) void;
pub extern fn logxyCplx(denom: *const real_t) void;
pub extern fn lnComplex(real: *const real_t, imag: *const real_t, ln_real: *real_t, ln_imag: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_Logxy(numer: *const real_t, denom: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn sqrt1Px2Complex(real: *const real_t, imag: *const real_t, res_real: *real_t, res_imag: *real_t, real_context: *realContext_t) void;
pub extern fn sqrtComplex(real: *const real_t, imag: *const real_t, res_real: *real_t, res_imag: *real_t, real_context: *realContext_t) void;
pub extern fn divComplexComplex(
    numer_real: *const real_t,
    numer_imag: *const real_t,
    denom_real: *const real_t,
    denom_imag: *const real_t,
    quotient_real: *real_t,
    quotient_imag: *real_t,
    real_context: *realContext_t,
) void;
pub extern fn mulComplexi(
    in_real: *const real_t,
    in_imag: *const real_t,
    product_real: *real_t,
    product_imag: *real_t,
) void;
pub extern fn mulComplexComplex(
    factor1_real: *const real_t,
    factor1_imag: *const real_t,
    factor2_real: *const real_t,
    factor2_imag: *const real_t,
    product_real: *real_t,
    product_imag: *real_t,
    real_context: *realContext_t,
) void;
pub extern fn mulComplexReal(
    factor1_real: *const real_t,
    factor1_imag: *const real_t,
    factor2: *const real_t,
    product_real: *real_t,
    product_imag: *real_t,
    real_context: *realContext_t,
) void;
pub extern fn WP34S_intMultiply(y: u64, x: u64) u64;
pub extern fn WP34S_intGCD(y: u64, x: u64) u64;
pub extern fn WP34S_intLCM(y: u64, x: u64) u64;
pub extern fn WP34S_intDivide(y: u64, x: u64) u64;
pub extern fn WP34S_intAdd(x: u64, y: u64) u64;
pub extern fn WP34S_intSubtract(x: u64, y: u64) u64;
pub extern fn WP34S_int2pow(x: u64) u64;
pub extern fn WP34S_int10pow(x: u64) u64;
pub extern fn WP34S_intLog10(x: u64) u64;
pub extern fn WP34S_intLog2(x: u64) u64;
pub extern fn WP34S_intAbs(x: u64) u64;
pub extern fn WP34S_intSqrt(x: u64) u64;
pub extern fn WP34S_intChs(x: u64) u64;
pub extern fn WP34S_build_value(x: u64, sign: i32) u64;
pub extern fn WP34S_extract_value(val: u64, sign: *i32) u64;
pub extern fn WP34S_Mod(x: *const real_t, y: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn WP34S_BigMod(x: *const real_t, y: *const real_t, res: *real_t, real_context: *realContext_t) void;
pub extern fn decimal128ToNumber(source: *const real34_t, destination: *real_t) *real_t;
pub extern fn decNumberMultiply(result: *real_t, lhs: *const real_t, rhs: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn decNumberDivide(result: *real_t, lhs: *const real_t, rhs: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn decNumberSquareRoot(result: *real_t, rhs: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn decNumberExp(result: *real_t, rhs: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn decNumberAdd(result: *real_t, lhs: *const real_t, rhs: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn decNumberSubtract(result: *real_t, lhs: *const real_t, rhs: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn decNumberFMA(result: *real_t, lhs: *const real_t, rhs: *const real_t, term: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn decNumberFromUInt32(result: *real_t, rhs: u32) *real_t;
pub extern fn __gmpz_clear(op: *mpz_struct) void;
pub extern fn __gmpz_init(op: *mpz_struct) void;
pub extern fn __gmpz_cmp_ui(lhs: *const mpz_struct, rhs: c_ulong) c_int;
pub extern fn __gmpz_tdiv_q_ui(result: *mpz_struct, op: *const mpz_struct, divisor: c_ulong) c_ulong;
pub extern fn __gmpz_get_ui(op: *const mpz_struct) c_ulong;
pub extern fn __gmpz_cmp(lhs: *const mpz_struct, rhs: *const mpz_struct) c_int;
pub extern fn __gmpz_set_si(op: *mpz_struct, value: c_long) void;
pub extern fn __gmpz_set_ui(op: *mpz_struct, value: c_ulong) void;
pub extern fn __gmpz_add(result: *mpz_struct, lhs: *const mpz_struct, rhs: *const mpz_struct) void;
pub extern fn __gmpz_add_ui(result: *mpz_struct, lhs: *const mpz_struct, rhs: c_ulong) void;
pub extern fn __gmpz_mul(result: *mpz_struct, lhs: *const mpz_struct, rhs: *const mpz_struct) void;
pub extern fn __gmpz_mul_2exp(result: *mpz_struct, lhs: *const mpz_struct, rhs: c_ulong) void;
pub extern fn __gmpz_sub(result: *mpz_struct, lhs: *const mpz_struct, rhs: *const mpz_struct) void;
pub extern fn __gmpz_sub_ui(result: *mpz_struct, lhs: *const mpz_struct, rhs: c_ulong) void;
pub extern fn __gmpz_mul_ui(result: *mpz_struct, lhs: *const mpz_struct, rhs: c_ulong) void;
pub extern fn __gmpz_gcd(result: *mpz_struct, lhs: *const mpz_struct, rhs: *const mpz_struct) void;
pub extern fn __gmpz_lcm(result: *mpz_struct, lhs: *const mpz_struct, rhs: *const mpz_struct) void;
pub extern fn __gmpz_tdiv_qr(quotient: *mpz_struct, remainder: *mpz_struct, dividend: *const mpz_struct, divisor: *const mpz_struct) void;
pub extern fn __gmpz_tdiv_r(result: *mpz_struct, dividend: *const mpz_struct, divisor: *const mpz_struct) void;
pub extern fn __gmpz_fdiv_q_ui(result: *mpz_struct, op: *const mpz_struct, divisor: c_ulong) c_ulong;
pub extern fn __gmpz_rootrem(root: *mpz_struct, rem: *mpz_struct, op: *const mpz_struct, n: c_ulong) void;
pub extern fn int32ToReal(source: i32, destination: *real_t) void;
pub extern fn decNumberCompare(result: *real_t, lhs: *const real_t, rhs: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn decNumberFromString(result: *real_t, source: [*:0]const u8, real_context: *realContext_t) *real_t;
pub extern fn decNumberPlus(result: *real_t, rhs: *const real_t, real_context: *realContext_t) *real_t;
pub extern fn realToIntegralValue(source: *const real_t, destination: *real_t, mode: rounding_t, real_context: *realContext_t) void;
pub extern fn realCompareEqual(number1: *const real_t, number2: *const real_t) bool;
pub extern fn realCompareLessThan(number1: *const real_t, number2: *const real_t) bool;
pub extern fn realCompareAbsEqual(number1: *const real_t, number2: *const real_t) bool;
pub extern fn realCompareAbsGreaterThan(number1: *const real_t, number2: *const real_t) bool;
pub extern fn realIsAnInteger(x: *const real_t) bool;
pub extern fn real34IsAnInteger(value: *const real34_t) bool;
pub extern fn divRealComplex(
    numer: *const real_t,
    denom_real: *const real_t,
    denom_imag: *const real_t,
    quotient_real: *real_t,
    quotient_imag: *real_t,
    real_context: *realContext_t,
) void;
pub extern fn fnInvertMatrix(unused_but_mandatory_parameter: u16) void;
pub extern fn fnMatrixSquareRoot(unused_but_mandatory_parameter: u16) void;
pub extern fn realSetNaN(value: *real_t) void;
pub extern fn realSetZero(value: *real_t) void;
pub extern fn realSetOne(value: *real_t) void;
pub extern fn realPower(base: *const real_t, exponent: *const real_t, result: *real_t, real_context: *realContext_t) void;
pub extern fn PowerReal(base: *const real_t, exponent: *const real_t, result: *real_t, real_context: *realContext_t) void;
pub extern fn PowerComplex(base_real: *const real_t, base_imag: *const real_t, exponent_real: *const real_t, exponent_imag: *const real_t, result_real: *real_t, result_imag: *real_t, real_context: *realContext_t) u8;
pub extern fn convertRealToReal34ResultRegister(real: *const real_t, dest: calcRegister_t) void;
pub extern fn realToInt32C47(source: *const real_t, err: ?*bool) i32;

pub extern fn z47_math_wrappers_build_sign_result(result: i32) void;
pub extern fn z47_math_wrappers_change_sign_long_integer() void;
pub extern fn z47_math_wrappers_square_long_integer() void;
pub extern fn z47_math_wrappers_cube_long_integer() void;
pub extern fn z47_math_wrappers_long_integer_fibonacci(n: u32, result: *mpz_struct) void;
pub extern fn z47_math_wrappers_const_0() *const real_t;
pub extern fn z47_math_wrappers_const_1() *const real_t;
pub extern fn z47_math_wrappers_const_minus_1() *const real_t;
pub extern fn z47_math_wrappers_const_2() *const real_t;
pub extern fn z47_math_wrappers_const_3() *const real_t;
pub extern fn z47_math_wrappers_const_5() *const real_t;
pub extern fn z47_math_wrappers_const_100() *const real_t;
pub extern fn z47_math_wrappers_const_1on2() *const real_t;
pub extern fn z47_math_wrappers_const_1on3() *const real_t;
pub extern fn z47_math_wrappers_const_phi() *const real_t;
pub const legacy = struct {
    const legacy_prefix = "z47_math_" ++ "wrappers_" ++ "legacy_";
    const RetainedU16Fn = *const fn (u16) callconv(.c) void;
